# backend/app/api/router.py
@@ -1,6 +1,6 @@
 from fastapi import APIRouter
 
-from app.api.endpoints import ping, todos
+from app.api.endpoints import people, ping, todos
 
 api_router = APIRouter(prefix="/api")
 
@@ -12,4 +12,9 @@ api_router.include_router(
 api_router.include_router(
     todos.router,
     tags=["todos"],
+)
+
+api_router.include_router(
+    people.router,
+    tags=["people"],
 )
